--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,15 @@
     <meta name="theme-color" content="#f44336" />
     <meta
       name="description"1!
-      content="This is the portfolio of Zahra Bashir, Under Construction :D, needs updates!"
+      content="This is the portfolio of Negar Zeynalabedin, Under Construction :D, needs updates!"
     />
-    <meta name="author" content="Zahra Bashir">
+    <meta name="author" content="Negar Zeynalabedin">
     <!-- <meta name="keywords" content="Marek, Grzyb, Portfolio, Video, Game, Developer, Programmer, C++, C#, .NET, ASP.NET, Java, Android, Unity, Unreal, Engine, UE, Mobile, Desktop, Web, Resume, CV"> -->
 
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
-    <title> zahrabashir98.github.io | Zahra Bashir -  CE Undergrad Student &amp; AI Enthusiast</title>
+    <title> zahrabashir98.github.io | Negar Zeynalabedin -  CE Undergrad Student &amp; AI Enthusiast</title>
   </head>
   <body>
     <noscript>Sorry, You need to enable JavaScript to view this site.</noscript>
